fix(order-details): fix spacing above documents section

--- a/frontend/src/pages/orderdetails/styles/orderDetails.module.scss
+++ b/frontend/src/pages/orderdetails/styles/orderDetails.module.scss
@@ -30,14 +30,9 @@
 
       display: flex;
       flex-direction: column;
-      justify-content: space-between;
-      gap: var(--mantine-spacing-xs);
+      gap: var(--mantine-spacing-md);
 
       overflow: auto;
-
-      & > div:first-child {
-        flex-grow: 1;
-      }
     }
 
     & > .products {
@@ -52,7 +47,6 @@
 
 .order_info {
   width: 100%;
-  height: 100%;
 
   display: flex;
   flex-direction: column;
